# dumpfiles

./: README.md  pyproject.toml
src/dumpfiles/: cli.py
